kubernetes/api/users/users_api_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  labels:
    api: users
    app: users-api
    tier: backend
spec:
  selector:
    matchLabels:
      app: users-api
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: users-api
        tier: backend
    spec:
      containers:
        - name: users-api-server
          image: frouioui/tagenal-users-service:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: grpc
              containerPort: 9090
            - name: http
              containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  labels:
    api: users
    app: users-api
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: users-api
    tier: backend
  ports:
    - port: 9090
      targetPort: 9090
      name: grpc
    - port: 10000
      targetPort: 10000
      name: http
