kubernetes/api/users/traefik_users_api_server.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: users-api-http-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.tagenal`) && PathPrefix(`/users`)
      services:
        - name: users-api
          port: 10000
      middlewares:
        - name: users-api-http-route-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: users-api-http-route-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /users
      - /users/
